Mar 14, 2012 - chris ---------------------------------------------------
o enabled approx matching for ham_cursor_find

Mar 11, 2012 - chris ---------------------------------------------------
o hamsterdb is now thread-safe
o When using Transactions, the key->data and record->data pointers
	will point into memory managed by the Transaction, not by the
	Database

Feb 18, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.1

Feb 15, 2012 - chris ---------------------------------------------------
o ham_find() now supports approximate matching w/ transactions enabled

Feb 07, 2012 - chris ---------------------------------------------------
o fixed bug where HAM_ONLY_DUPLICATES was ignored when used in a
	Transaction (thanks, Mark Ruijter from lessfs)

Feb 06, 2012 - chris ---------------------------------------------------
o added a public macro HAM_API_REVISION to allow users to programmatically
    distinguish between new and old interface of ham_txn_begin
o win32: fixed build issue if HAM_DISABLE_COMPRESSION is defined (thanks,
    Andy Thalmann (http://www.softdev.ch))

Feb 05, 2012 - chris ---------------------------------------------------
o the device structure (ham_device_t) was C++-ified; if you use 
    ham_env_set_device then you will have to change your code
o fixed wrong version check when loading databases from 1.1.x 
o now using the native Win32 API for os_pwrite and os_pread (thanks,
    Andy Thalmann (http://www.softdev.ch))
o added new parameter HAM_PARAM_LOG_DIRECTORY to specify the directory
    where the log file and the journal files are stored

Jan 19, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0
o Changed interface ham_txn_begin, also for Wrapper APIs

Jan 05, 2012 - chris ---------------------------------------------------
o when recovery or transactions are enabled then for most operations the 